--- a/app/src/main/res/layout/fragment_notepad.xml
+++ b/app/src/main/res/layout/fragment_notepad.xml
@@ -51,7 +51,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="-100dp"
                 android:layout_marginRight="15dp"
-                android:layout_marginTop="-20dp" />
+                android:layout_marginTop="-20dp"
+                android:visibility="gone" />
         </LinearLayout>
 
         <LinearLayout
@@ -96,7 +97,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="-100dp"
                 android:layout_marginRight="15dp"
-                android:layout_marginTop="-20dp" />
+                android:layout_marginTop="-20dp"
+                android:visibility="gone" />
         </LinearLayout>
 
         <RelativeLayout
